# gambas-matcher-mock

./: .editorconfig  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  SECURITY.md  SUPPORT.md  docker-compose.yml
.gemini/: settings
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  epic_feature.yml  sub_task.yml
.github/workflows/: ci.yml
examples/: config.yaml  test.sh
examples/mocks/: bank_balance.json
gambas-application/: Cargo.toml
gambas-application/src/: lib.rs
gambas-domain/: Cargo.toml
gambas-domain/src/: lib.rs
gambas-domain/src/engine/: mod.rs  path_pattern.rs
gambas-infrastructure/: Cargo.toml
gambas-infrastructure/src/: lib.rs
scripts/: labelV1.sh
specs/: issue2.md
src/: config.rs  main.rs  matcher.rs  mock.rs  proxy.rs
src/domain/: entities.rs
src/infrastructure/persistence/: mod.rs
src/infrastructure/web/: mod.rs
src/shared/: mod.rs
