[package]
name = "gambas-matcher-mock"
version = "0.1.0"
edition = "2021"

[dependencies]
# Runtime & Async
tokio = { version = "1", features = ["full"] }

# Data & Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "macros", "chrono"] }

# Error Handling
thiserror = "1.0"

# Web Server
axum = "0.7"
tower-http = { version = "0.5", features = ["fs"] }